Clear out java.library.path and java.ext.dirs.
This should fix McV pulling in (seemingly) unrelated JARs/libraries.

[1423]